@@ -51,7 +51,10 @@ ags_config = configuration_data({
 ags_config.set('AGS_WITH_LIBINSTPATCH', true)
 
 configure_file(output: 'config.h', configuration: ags_config)
-
+configure_file(output: 'ags_config.h', configuration: ags_config,
+  install: true,
+  install_dir: gsequencer_includedir / 'ags')
+  
 common_dependencies = [
   m_dependency,
   glib_dependency,
