@@ -1,3 +1,8 @@
+ags (3.6.23)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* improved meson build
+
 ags (3.6.22)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
